--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "apollo-boost": "^0.1.10",
+    "axios": "^0.18.0",
+    "glamorous-native": "^1.4.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "native-base": "^2.6.1",
@@ -15,6 +18,7 @@
     "react-apollo": "^2.1.8",
     "react-native": "0.55.4",
     "react-native-elements": "^0.19.1",
+    "react-native-image-picker": "^0.26.10",
     "react-native-paper": "^1.11.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.5",
